// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows any candidate to be selected when no candidate is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        Federal Election
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          President
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 1.
          </strong>
           You have selected
           
          0
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="minnieMouse"
      >
        <input
          class="visually-hidden c5"
          id="minnieMouse"
          name="president"
          type="checkbox"
          value="minnieMouse"
        />
        <div
          class="c2"
        >
          <strong>
            Minnie Mouse
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Mouse
        </div>
      </label>
      <label
        class="c4"
        for="mickeyMouse"
      >
        <input
          class="visually-hidden c5"
          id="mickeyMouse"
          name="president"
          type="checkbox"
          value="mickeyMouse"
        />
        <div
          class="c2"
        >
          <strong>
            Mickey Mouse
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Mouse
        </div>
      </label>
      <label
        class="c4"
        for="donaldDuck"
      >
        <input
          class="visually-hidden c5"
          id="donaldDuck"
          name="president"
          type="checkbox"
          value="donaldDuck"
        />
        <div
          class="c2"
        >
          <strong>
            Donald Duck
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Duck
        </div>
      </label>
      <label
        class="c4"
        for="writeInCandidate"
      >
        <input
          class="visually-hidden c5"
          id="writeInCandidate"
          name="president"
          type="checkbox"
          value="writeInCandidate"
        />
        <div
          class="c2"
        >
          <em>
            add a write-in candidate
          </em>
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;

exports[`doesn't allow other candidates to be selected when one candidate is selected 1`] = `
.c2 {
  line-height: 1.2;
  max-width: 66ch;
}

.c2 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + h2 {
  margin-top: -0.75rem;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c1 {
  font-weight: 600;
  text-transform: uppercase;
}

.c0 {
  margin: 0 0.25rem 1rem;
}

.c3 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: #028099;
  color: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c4:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c4:before {
  content: '✓';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: #028099;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c4 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c5 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c2 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c0 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

@media (min-width:480px) {
  .c4 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <fieldset
    class=""
  >
    <legend
      class="c0"
    >
      <small
        class="c1"
      >
        Federal Election
        <span
          class="visually-hidden"
        >
          .
        </span>
      </small>
      <div
        class="c2"
      >
        <h1>
          President
          <span
            class="visually-hidden"
          >
            .
          </span>
        </h1>
        <p>
          <strong>
            Vote for 1.
          </strong>
           You have selected
           
          1
          .
        </p>
      </div>
    </legend>
    <div
      class="c3"
    >
      <label
        class="c4"
        for="minnieMouse"
      >
        <input
          checked=""
          class="visually-hidden c5"
          id="minnieMouse"
          name="president"
          type="checkbox"
          value="minnieMouse"
        />
        <div
          class="c2"
        >
          <strong>
            Minnie Mouse
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Mouse
        </div>
      </label>
      <label
        class="c6"
        for="mickeyMouse"
      >
        <input
          class="visually-hidden c5"
          disabled=""
          id="mickeyMouse"
          name="president"
          type="checkbox"
          value="mickeyMouse"
        />
        <div
          class="c2"
        >
          <strong>
            Mickey Mouse
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Mouse
        </div>
      </label>
      <label
        class="c6"
        for="donaldDuck"
      >
        <input
          class="visually-hidden c5"
          disabled=""
          id="donaldDuck"
          name="president"
          type="checkbox"
          value="donaldDuck"
        />
        <div
          class="c2"
        >
          <strong>
            Donald Duck
          </strong>
          <span
            class="visually-hidden"
          >
            ,
          </span>
          <br />
          Duck
        </div>
      </label>
      <label
        class="c6"
        for="writeInCandidate"
      >
        <input
          class="visually-hidden c5"
          disabled=""
          id="writeInCandidate"
          name="president"
          type="checkbox"
          value="writeInCandidate"
        />
        <div
          class="c2"
        >
          <em>
            add a write-in candidate
          </em>
        </div>
      </label>
    </div>
  </fieldset>
</div>
`;
